Implemant tab view programatically (Add some page view programmatically )

--- a/XamarinFormsAnimation/XamarinFormsAnimation/Views/MainPage.xaml
+++ b/XamarinFormsAnimation/XamarinFormsAnimation/Views/MainPage.xaml
@@ -1,10 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <TabbedPage
     xmlns     ="http://xamarin.com/schemas/2014/forms"
     xmlns:x    ="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:XamarinFormsAnimation.Views"
     x:Class    ="XamarinFormsAnimation.Views.MainPage">
-    <TabbedPage.Children>
+    <ContentPage>
+        <Label Text="Put some content" TextColor="Beige" MinimumHeightRequest="40" WidthRequest="400"/>
+    </ContentPage>
+<!--    <TabbedPage.Children>
         <NavigationPage
             Title="Browse">
             <NavigationPage.Icon>
@@ -33,5 +36,5 @@
                 <views:AboutPage />
             </x:Arguments>
         </NavigationPage>
-    </TabbedPage.Children>
+    </TabbedPage.Children>-->
 </TabbedPage>
