--- a/XamarinFormsAnimation/XamarinFormsAnimation/App.xaml
+++ b/XamarinFormsAnimation/XamarinFormsAnimation/App.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Application
     xmlns ="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -7,7 +7,7 @@
         <ResourceDictionary>
             <!--Global Styles-->
             <Color
-                x:Key="NavigationPrimary">#2196F3</Color>
+                x:Key="NavigationPrimary">#000000</Color>
             <Style
                 TargetType="NavigationPage">
                 <Setter
