--- a/XamarinFormsAnimation/XamarinFormsAnimation/Views/MainPage.xaml
+++ b/XamarinFormsAnimation/XamarinFormsAnimation/Views/MainPage.xaml
@@ -7,34 +7,5 @@
     <ContentPage>
         <Label Text="Put some content" TextColor="Beige" MinimumHeightRequest="40" WidthRequest="400"/>
     </ContentPage>
-<!--    <TabbedPage.Children>
-        <NavigationPage
-            Title="Browse">
-            <NavigationPage.Icon>
-                <OnPlatform
-                    x:TypeArguments="FileImageSource">
-                    <On
-                        Platform="iOS"
-                        Value   ="tab_feed.png" />
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ItemsPage />
-            </x:Arguments>
-        </NavigationPage>
-        <NavigationPage
-            Title="About">
-            <NavigationPage.Icon>
-                <OnPlatform
-                    x:TypeArguments="FileImageSource">
-                    <On
-                        Platform="iOS"
-                        Value   ="tab_about.png" />
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>
-    </TabbedPage.Children>-->
+    <!-- put there some page children content -->
 </TabbedPage>
